core/prometheus/admissionregistration.k8s.io_v1_MutatingWebhookConfiguration_prometheus-community-kube-admission.yaml
# Source: kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name:  prometheus-community-kube-admission
  annotations:
    certmanager.k8s.io/inject-ca-from: "vynil-monitor/prometheus-community-kube-admission"
    cert-manager.io/inject-ca-from: "vynil-monitor/prometheus-community-kube-admission"
  labels:
    app: kube-prometheus-stack-admission
    
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: prometheus-community
    app.kubernetes.io/version: "56.0.2"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-56.0.2
    release: "prometheus-community"
    heritage: "Helm"
    app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
    app.kubernetes.io/component: prometheus-operator-webhook
webhooks:
  - name: prometheusrulemutate.monitoring.coreos.com
    failurePolicy: Fail
    rules:
      - apiGroups:
          - monitoring.coreos.com
        apiVersions:
          - "*"
        resources:
          - prometheusrules
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        namespace: vynil-monitor
        name: prometheus-community-kube-operator
        path: /admission-prometheusrules/mutate
    timeoutSeconds: 10
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
